--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
@@ -22,15 +22,15 @@
           <ul>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
               <p>In this pair the similarity is relatively <strong>HIGH</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_high.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
+              <img id="imagePair_1_high" src="{{ static 'similarity/instruction_images/instruction_3_high.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
               <p>In this pair the similarity is <strong>INTERMEDIATE</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_intermediate.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
+              <img id="imagePair_1_intermediate" src="{{ static 'similarity/instruction_images/instruction_3_intermediate.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 0px;"> 
               <p>In this pair the similarity is relatively <strong>LOW</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_low.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
+              <img id="imagePair_1_low" src="{{ static 'similarity/instruction_images/instruction_3_low.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
           </ul>
         </div> 
@@ -44,6 +44,25 @@
 <div style="float: right;">
 {{ next_button }}
 </div>
+
+<!-- script to load different example images based on study number -->
+<script type="text/javascript">
+
+// fetching the study number from the session configurations
+studyNumber = {{ session.config.study_number }};
+console.log("Study number = ", studyNumber);
+
+// constructing image path based on study number
+folderName = `study_${studyNumber}_examples`;
+staticRoot = "/static/similarity/instruction_images/";
+imgPath = `${staticRoot}${folderName}`;
+
+// replacing images
+document.getElementById("imagePair_1_high").src=`${imgPath}/high_1.png`;
+document.getElementById("imagePair_1_intermediate").src=`${imgPath}/intermediate_1.png`;
+document.getElementById("imagePair_1_low").src=`${imgPath}/low_1.png`;
+
+</script>
 
 {{ endblock }}
 
