Changed instruction image, study 3, high-similarity 2
Changed instruction image, study 3, high-similarity 2

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
@@ -17,7 +17,7 @@
         <p>
           <strong>Study procedure:</strong> 
           In this experiment, you will be asked to examine pairs of simple line drawings and rate how similar you find them. 
-          The experiment includes around 400 short trials divided into 3 blocks, and it should take about 30 min to complete. 
+          The experiment includes a number of short trials divided into 3 blocks, and it should take about 30 min to complete. 
           There will be breaks between the blocks. At the start of the experiment, you will receive further instructions and do a practice round to familiarise yourself with the task and the rating scale. 
         </p>
         <p>
