--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -242,7 +242,7 @@ console.log("stim list", stimList);
 console.log("file name list (index test)", fileNameList[0]);
 console.log("stim entry", stimList[idInGroup][0]);
 
-// defining attention check array and creating a data base
+// defining attention check array
 const attentionFileNames = ["high_1.png", 
 "high_2.png", 
 "high_3.png", 
