Implemeted Likert scale rating system
- Implemeted Likert scale rating system
- Changed instructions to match the new rating system

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
@@ -28,11 +28,11 @@
           The two drawings will always share some similarities, but the degree of similarity will vary from trial to trial. 
         </p>
         <p>
-          <u><strong>YOUR TASK</strong> is to rate how similar you find the two drawings, using a sliding scale that ranges from LOW to HIGH.</u>
+          <u><strong>YOUR TASK</strong> is to rate how similar you find the two drawings, using a 5-point scale that ranges from VERY LOW to VERY HIGH.</u>
         </p>
         <ul>
-          <li>A HIGH rating means that the drawings look almost identical.</li>
-          <li>A LOW rating means that there are noticeable differences between them.</li>
+          <li>A VERY HIGH rating means that the drawings look almost identical.</li>
+          <li>A VERY LOW rating means that there are noticeable differences between them.</li>
         </ul>
         <p>
           Please try to use the scale consistently throughout the experiment. 
