--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
@@ -15,13 +15,13 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
       <div class="card card-body">
         <p>
-          To help you use the full range of the scale (from LOW to HIGH), we will give you an idea of the range of variation you should expect. 
+          To help you use the full range of the scale (from VERY LOW to VERY HIGH), we will give you an idea of the range of variation you should expect. 
           Consider the following illustrative examples. 
         </p>
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 10px; margin-top: 10px;">
           <ul>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
-              <p>In this pair the similarity is relatively <strong>HIGH</strong>:</p>
+              <p>In this pair the similarity is <strong>VERY HIGH</strong>:</p>
               <img id="imagePair_1_high" src="{{ static 'similarity/instruction_images/instruction_3_high.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
@@ -29,7 +29,7 @@
               <img id="imagePair_1_intermediate" src="{{ static 'similarity/instruction_images/instruction_3_intermediate.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 0px;"> 
-              <p>In this pair the similarity is relatively <strong>LOW</strong>:</p>
+              <p>In this pair the similarity is <strong>VERY LOW</strong>:</p>
               <img id="imagePair_1_low" src="{{ static 'similarity/instruction_images/instruction_3_low.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
           </ul>
