--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_4.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_4.html
@@ -20,7 +20,7 @@
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 10px; margin-top: 10px;">
           <ul>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
-              <p>In this pair the similarity is relatively <strong>HIGH</strong>:</p>
+              <p>In this pair the similarity is <strong>VERY HIGH</strong>:</p>
               <img id="imagePair_2_high" src="{{ static 'similarity/instruction_images/instruction_4_high.png' }}" alt="" style="width: 300px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
@@ -28,7 +28,7 @@
               <img id="imagePair_2_intermediate" src="{{ static 'similarity/instruction_images/instruction_4_intermediate.png' }}" alt="" style="width: 300px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 0px;"> 
-              <p>In this pair the similarity is relatively <strong>LOW</strong>:</p>
+              <p>In this pair the similarity is <strong>VERY LOW</strong>:</p>
               <img id="imagePair_2_low" src="{{ static 'similarity/instruction_images/instruction_4_low.png' }}" alt="" style="width: 300px; height: auto; border: 0px dotted">
             </li>
           </ul>
