--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_5.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_5.html
@@ -26,7 +26,7 @@
             You don’t need to think too much about it—just go with your impression or ‘gut feeling’. 
           </li>
           <li>
-            To indicate your response, click and drag the slider below the drawings. 
+            Indicate your response using the scale below the drawings. 
           </li>
           <li>
             When you are ready to continue, click the ‘Next’ button or hit ‘Enter’ in your keyboard. 
