--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -115,6 +115,7 @@
             {{ formfield_errors 'isAttentionCheck'}}
             {{ formfield_errors 'withinExpectedRatingRange'}}
             {{ formfield_errors 'originalFileName'}}
+            {{ formfield_errors 'sessionStudyNumber'}}
         </div>
 
         <br>
@@ -133,6 +134,7 @@
             <input type="hidden" name="isAttentionCheck" id="isAttentionCheck" />
             <input type="hidden" name="withinExpectedRatingRange" id="withinExpectedRatingRange" />
             <input type="hidden" name="originalFileName" id="originalFileName" />
+            <input type="hidden" name="sessionStudyNumber" id="sessionStudyNumber" />
 
 		</div>
 
@@ -344,6 +346,7 @@ let ratingTimes = [];
 let isAttentionCheck = [];
 let withinExpectedRatingRange = [];
 let originalFileName = [];
+let sessionStudyNumber = [];
 
 // Initialize the rating variable
 let selectedRating = null;
@@ -453,6 +456,7 @@ function loadNextImage() {
     ratingTimes.push(RT);
     isAttentionCheck.push(result.attCheckTest);
     originalFileName.push(result.fileName);
+    sessionStudyNumber.push(studyNumber);
 
     // Update hidden input fields regardless of stimuli / attention check
     document.getElementById('imageIndices').value = JSON.stringify(imageIndices);
@@ -461,6 +465,7 @@ function loadNextImage() {
     document.getElementById('ratingTimes').value = JSON.stringify(ratingTimes);
     document.getElementById('isAttentionCheck').value = JSON.stringify(isAttentionCheck);
     document.getElementById('originalFileName').value = JSON.stringify(originalFileName);
+    document.getElementById('sessionStudyNumber').value = JSON.stringify(sessionStudyNumber);
     
     // Add the ratingWithinRange variable to Otree if the img is an attention check
     if (result.attCheckTest) {
